# OOP

./: 2laba.cpp  randarray  randarray.cpp  randmatrix  randmatrix.cpp
3lab/: 1.cpp  2.cpp  hello.cpp  tpoint  tpoint.cpp
4lab/: point.cpp  shapes.cpp  test.cpp  tpoint2.cpp  tshapes  tshapes.cpp  tshapes4lab.cpp
5lab/: tshapes  tshapes.cpp  tshapes5lab.cpp
6lab/: tshapes  tshapes.cpp
7lab/: app  main.cpp
cw/: CMakeLists.txt  bst.cpp  imgui.ini  test.cpp
cw/cmake/: CompileOptions.cmake
cw/data/: OOP_CW_REPORT_IS241_KULIK_PAVEL.docx  ~$P_CW_REPORT_IS241_KULIK_PAVEL.docx
cw/include/: BST.h  BST_graphics.h  line.h
cw/src/: CMakeLists.txt
cw/src/BST/: BST.cpp  CMakeLists.txt
cw/src/BST_graphics/: BST_graphics.cpp  CMakeLists.txt
cw/src/app/: CMakeLists.txt  main.cpp
cw/src/line/: CMakeLists.txt  line.cpp
